--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="FxFean57-_CoGTXnMxuq0mnlRxqc3Ir6GRkEfT5vB_0" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="C2C Journeys - Your trusted travel partner. Book cheap flights, hotels, and visa services. Best prices guaranteed with 24/7 support.">
